Changed the content to personal content

--- a/index.html
+++ b/index.html
@@ -34,38 +34,37 @@
     </div>
 
     <div class="card">
-      <h2 class="text-center" >My favorite movies</h2>
+      <h2 class="text-center" >Client portfolio</h2>
       <table>
         <tbody>
           <tr>
             <td>
-              <img class="thumbnail" src="images/armageddon.jpg" alt="Armageddon">
+              <img class="thumbnail" src="images/paykey.png" alt="PayKey">
             </td>
             <td>
-              <h3>Armageddon</h3>
-              <p>After discovering that an asteroid the size of Texas is going
-                to impact Earth in less than a month, N.A.S.A. recruits a misfit
-                team of deep core drillers to save the planet.</p>
+              <h3>PayKey</h3>
+              <p> PayKey is a social payment solution that enables banks to provide their
+                users with peer-to-peer payment options through any social or messaging platform.</p>
               </td>
             </tr>
             <tr>
               <td>
-                <img class="thumbnail" src="images/matrix.jpg" alt="The Matrix" width="140">
+                <img class="thumbnail" src="images/communitake.png" alt="Communitake">
               </td>
               <td>
-                <h3>The Matrix</h3>
-                <p>A computer hacker learns from mysterious rebels about the true nature
-                  of his reality and his role in the war against its controllers.</p>
+                <h3>Communitake</h3>
+                <p>CommuniTake Technologies provides a mobile enterprise security platform that
+                  delivers a multilayered solution for mobile security, manageability, and productivity.</p>
                 </td>
               </tr>
               <tr>
                 <td>
-                  <img class="thumbnail" src="images/shawshank.jpg" alt="The Shawshank Redemption" width="140">
+                  <img class="thumbnail" src="images/orcam.jpg" alt="OrCam">
                 </td>
                 <td>
-                  <h3>The Shawshank Redemption</h3>
-                  <p>Two imprisoned men bond over a number of years, finding solace and eventual
-                    redemption through acts of common decency.</p>
+                  <h3>Orcam</h3>
+                  <p>OrCam Technologies has developed a wearable assistive technology
+                    device for people who are blind, visually impaired, or have reading or other disabilities.</p>
                   </td>
                 </tr>
               </tbody>
@@ -74,21 +73,19 @@
 
           <div class="card text-center">
             <h2>About this page</h2>
-            <p>This page has been coded during the <a href="https://www.lewagon.com/program" target='_blank'>FullStack program @LeWagon.</a>
-              That was probably the best experience of my entire life.</p>
-
-              <ul class="list-inline">
-                <li>
-                  <a href="#"><i class="fa fa-heart" aria-hidden="true"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-share" aria-hidden="true"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-star" aria-hidden="true"></i></a>
-                </li>
-              </ul>
-            </div>
+            <p>This page shows the client portfolio of the startups izmus consults to</p>
+            <ul class="list-inline">
+              <li>
+                <a href="#"><i class="fa fa-heart" aria-hidden="true"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-share" aria-hidden="true"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-star" aria-hidden="true"></i></a>
+              </li>
+            </ul>
           </div>
-        </body>
-        </html>
+        </div>
+      </body>
+      </html>
