modified the startups design

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700i" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title>Basic info</title>
+  <title>Rabea Bader - IZMUS</title>
 </head>
 <body>
   <div class="container">
@@ -39,7 +39,9 @@
         <tbody>
           <tr>
             <td>
-              <img class="thumbnail" src="images/paykey.png" alt="PayKey">
+              <a href="http://www.paykey.com/" target="_blank">
+                <img class="thumbnail" src="images/paykey.png" alt="PayKey">
+              </a>
             </td>
             <td>
               <h3>PayKey</h3>
@@ -49,7 +51,9 @@
             </tr>
             <tr>
               <td>
-                <img class="thumbnail" src="images/communitake.png" alt="Communitake">
+                <a href="http://www.communitake.com/" target="_blank">
+                  <img class="thumbnail" src="images/communitake.png" alt="Communitake">
+                </a>
               </td>
               <td>
                 <h3>Communitake</h3>
@@ -59,7 +63,9 @@
               </tr>
               <tr>
                 <td>
-                  <img class="thumbnail" src="images/orcam.jpg" alt="OrCam">
+                  <a href="https://www.orcam.com/" target="_blank">
+                    <img class="thumbnail" src="images/orcam.png" alt="OrCam">
+                  </a>
                 </td>
                 <td>
                   <h3>Orcam</h3>
