minor text changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img class="img-circle" src="images/profile.png" alt="Rabea Bader">
       <h1>Rabea Bader</h1>
       <h2>CEO @IZMUS</h2>
-      <p>Connecting israeli startups to investors and potential business partners from SEA</p>
+      <p>Connecting israeli startups to investors and potential business partners in SEA</p>
       <a class="red-btn" href="http://izmus.com/" target='_blank'>See for yourself</a>
     </div>
 
@@ -34,7 +34,7 @@
     </div>
 
     <div class="card">
-      <h2 class="text-center" >Client portfolio</h2>
+      <h2 class="text-center" >Client portfolio sample</h2>
       <table>
         <tbody>
           <tr>
