--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" href="images/favicon.png">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700i" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -15,8 +16,9 @@
       <img class="img-circle" src="images/profile.png" alt="Rabea Bader">
       <h1>Rabea Bader</h1>
       <h2>CEO @IZMUS</h2>
+      <img id="logo" src="images/LOGO.png" alt="IZMUS">
       <p>Connecting israeli startups to investors and potential business partners in SEA</p>
-      <a class="red-btn" href="http://izmus.com/" target='_blank'>See for yourself</a>
+      <a class="blue-btn" href="http://izmus.com/" target='_blank'>See for yourself</a>
     </div>
 
     <div class="card text-center">
